--- a/index.html
+++ b/index.html
@@ -146,12 +146,18 @@ display: flex;
 justify-content: space-between;
 color: purple;
 font-family:cursive;
+position: relative;
 
 }
 i{
     padding-right: 10px;
     padding-top: 3px;
     color: purple;
+}
+label{
+    position: absolute;
+    right:20px
+    
 }
 
 
